Bug 1357869 - Don't assert when we restyle a child provider frame when an ancestor already handled nsChangeHint_ReconstructFrame. r=dbaron

MozReview-Commit-ID: D6mQeyo9zNl

--HG--
extra : rebase_source : 0894ae9f4aa452f2ef7f02f509713f796b020d95